; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_notes.c_git_note_commit_read.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_notes.c_git_note_commit_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OID_HEXSZ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_note_commit_read(i32** %0, i32* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  store i32** %0, i32*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  store i32* null, i32** %10, align 8
  %13 = load i32, i32* @GIT_OID_HEXSZ, align 4
  %14 = add nsw i32 %13, 1
  %15 = zext i32 %14 to i64
  %16 = call i8* @llvm.stacksave()
  store i8* %16, i8** %11, align 8
  %17 = alloca i8, i64 %15, align 16
  store i64 %15, i64* %12, align 8
  %18 = trunc i64 %15 to i32
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @git_oid_tostr(i8* %17, i32 %18, i32* %19)
  %21 = load i32*, i32** %7, align 8
  %22 = call i32 @git_commit_tree(i32** %10, i32* %21)
  store i32 %22, i32* %9, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %4
  br label %31

25:                                               ; preds = %4
  %26 = load i32**, i32*** %5, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = load i32*, i32** %7, align 8
  %29 = load i32*, i32** %10, align 8
  %30 = call i32 @note_lookup(i32** %26, i32* %27, i32* %28, i32* %29, i8* %17)
  store i32 %30, i32* %9, align 4
  br label %31

31:                                               ; preds = %25, %24
  %32 = load i32*, i32** %10, align 8
  %33 = call i32 @git_tree_free(i32* %32)
  %34 = load i32, i32* %9, align 4
  %35 = load i8*, i8** %11, align 8
  call void @llvm.stackrestore(i8* %35)
  ret i32 %34
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @git_oid_tostr(i8*, i32, i32*) #2

declare dso_local i32 @git_commit_tree(i32**, i32*) #2

declare dso_local i32 @note_lookup(i32**, i32*, i32*, i32*, i8*) #2

declare dso_local i32 @git_tree_free(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
